storage/innobase/dict/dict0mem.cc
@@ -148,7 +148,6 @@ dict_table_t *dict_table_t::create(const span<const char> &name,
   table->flags= static_cast<unsigned>(flags) & ((1U << DICT_TF_BITS) - 1);
   table->flags2= static_cast<unsigned>(flags2) & ((1U << DICT_TF2_BITS) - 1);
   table->name.m_name= mem_strdupl(name.data(), name.size());
-  table->mdl_name.m_name= table->name.m_name;
   table->is_system_db= dict_mem_table_is_system(table->name.m_name);
   table->space= space;
   table->space_id= space ? space->id : UINT32_MAX;
