storage/innobase/include/dict0mem.h
@@ -2105,17 +2105,30 @@ struct dict_table_t {
 	/** For overflow fields returns potential max length stored inline */
 	inline size_t get_overflow_field_local_len() const;
 
+   /** Parse the table file name into database namd and table name
+   @param table_name	table file name
+   @param db_name	database name buffer
+   @param tbl_name	table name buffer
+   @param db_name_len	database name length
+   @param tbl_name_len	table name length */
+   static void parse_tbl_name(
+     const table_name_t &table_name,
+     char (&db_name)[NAME_LEN + 1],
+     char (&tbl_name)[NAME_LEN + 1],
+     size_t *db_name_len, size_t *tbl_name_len) noexcept;
+
   /** Parse the table file name into table name and database name.
   @tparam        dict_frozen  whether the caller holds dict_sys.latch
   @param[in,out] db_name      database name buffer
   @param[in,out] tbl_name     table name buffer
   @param[out] db_name_len     database name length
   @param[out] tbl_name_len    table name length
-  @return whether the table name is visible to SQL */
+  @return DB_SUCCESS_LOCKED_REC if table name contains #sql-ib,
+          DB_CORRUPTION if db_len == 0, DB_SUCCESS otherwise */
   template<bool dict_frozen= false>
-  bool parse_name(char (&db_name)[NAME_LEN + 1],
-                  char (&tbl_name)[NAME_LEN + 1],
-                  size_t *db_name_len, size_t *tbl_name_len) const;
+  dberr_t parse_name(char (&db_name)[NAME_LEN + 1],
+                     char (&tbl_name)[NAME_LEN + 1],
+                     size_t *db_name_len, size_t *tbl_name_len) const;
 
   /** Clear the table when rolling back TRX_UNDO_EMPTY
   @return error code */
@@ -2353,11 +2366,6 @@ public:
   latch on the clustered index root page (which must also be
   an empty leaf page), and an ahi_latch (if btr_search_enabled). */
   Atomic_relaxed<trx_id_t> bulk_trx_id;
-
-  /** Original table name, for MDL acquisition in purge. Normally,
-  this points to the same as name. When is_temporary_name(name.m_name) holds,
-  this should be a copy of the original table name, allocated from heap. */
-  table_name_t mdl_name;
 
 	/*!< set of foreign key constraints in the table; these refer to
 	columns in other tables */
