storage/innobase/trx/trx0purge.cc
@@ -1103,8 +1103,10 @@ static dict_table_t *trx_purge_table_acquire(dict_table_t *table,
   char tbl_buf[NAME_LEN + 1];
   size_t tbl_len;
 
-  if (!table->parse_name<true>(db_buf, tbl_buf, &db_len, &tbl_len))
-    /* The name of an intermediate table starts with #sql */
+  dberr_t parse_result = table->parse_name<true>(
+			db_buf, tbl_buf, &db_len, &tbl_len);
+  if (parse_result == DB_SUCCESS_LOCKED_REC ||
+      parse_result == DB_CORRUPTION)
     goto got_table;
 
   {
